[tool.poetry]
name = 'gopher_bot'
version = '0.1.0'
description = 'Simple server stats tracking bot with support for wh00t server chat'
authors = ['roboto84 <7658704+roboto84@users.noreply.github.com>']

[tool.poetry.dependencies]
python = '^3.10'
python-dotenv = '^1.0.0'
psutil = '^5.9.5'
requests = '^2.30.0'
wh00t-core = {git = 'https://github.com/roboto84/wh00t_core.git', tag = 'v0.5.2'}

[tool.poetry.dev-dependencies]
pytest = '^7.2.0'

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'
